fixes spacing of text in 'about' section

--- a/css/styles.css
+++ b/css/styles.css
@@ -168,9 +168,9 @@ body {
 }
 
 #about p {
-  width: 60%;
+  width: 95%;
   margin: 0px auto;
-  padding-top: 75px;
+  padding-top: 50px;
 }
 
 .about-snippet {
